--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,3 +1,4 @@
-body {
-  background-color: green;
-}
+@import "common/normalize";
+@import "common/global";
+@import "common/variables";
+@import "common/text";
