--- a/src/less/common/global.less
+++ b/src/less/common/global.less
@@ -7,8 +7,8 @@
 body {
   background-color: @color-white;
   font-family: @font-text;
-  font-size: 18px;
-  line-height: 30px;
+  font-size: 14px;
+  line-height: 18px;
   font-weight: 400;
   font-style: normal;
   color: @color-black;
@@ -22,5 +22,5 @@ body {
   margin: -1px;
 }
 
-@font-title: Oswald, Arial, sans-serif;
+@font-title: "Oswald", sans-serif;
 @font-text: Arial, sans-serif;
