Стилизация блока header

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -2,3 +2,6 @@
 @import "common/global";
 @import "common/variables";
 @import "common/text";
+
+@import "blocks/header";
+@import "blocks/navigation";
