--- a/src/less/common/variables.less
+++ b/src/less/common/variables.less
@@ -1,5 +1,6 @@
 @color-black: #000000;
 @color-white: #ffffff;
+@color-gray-silver: #E6E6E6;
 
 @font-title: "Oswald", sans-serif;
 @font-text: Arial, sans-serif;
