--- a/src/less/common/variables.less
+++ b/src/less/common/variables.less
@@ -1,5 +1,7 @@
 @color-black: #000000;
 @color-white: #ffffff;
+@color-green: #68B738;
+@color-green-dark: #5EAA2F;
 
 @font-title: "Oswald", sans-serif;
 @font-text: Arial, sans-serif;
