--- a/src/less/block/content.less
+++ b/src/less/block/content.less
@@ -1,21 +1,14 @@
 .content {
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   width: 320px;
   min-height: 510px;
   padding: 28px 0 22px;
-}
-
-.content__container {
-  position: absolute;
-  min-height: 302px;
-  z-index: -1;
-  top: 0;
-}
-
-.content__background {
-  width: 320px;
-  height: 302px;
-  background-image: url("../../img/content-background.png");
+  background-image: linear-gradient(180deg, rgba(104, 183, 56, 0.85) 0, rgba(104, 183, 56, 0.85) 302px, @color-white 302px, @color-white 100%),
+  url("../../img/content-background.png");
   background-repeat: no-repeat;
 }
 
