--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -8,15 +8,10 @@
 }
 
 .header__logo {
-  text-decoration: none;
-}
+  display: flex;
+  align-items: center;
 
-.header__burger-button {
-  border: none;
-  background-color: transparent;
-  background-image: url("../../img/menu-button.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 24px;
-  height: 24px;
+  &--text {
+    height: 24px;
+  }
 }
