--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -2,10 +2,14 @@
   position: absolute;
   top: 66px;
   left: 50%;
-  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
-  //display: none;
+  transform: translateX(-50%);
+  border-bottom: 1px solid @color-gray-silver;
+
+  &--disable {
+    display: none;
+  }
 }
 
 .navigation__item {
@@ -18,12 +22,11 @@
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
-  text-decoration: none;
   border-top: 1px solid @color-gray-silver;
   color: @color-black;
   background-color: @color-white;
 
   &:last-child {
-    border-bottom: 1px solid @color-gray-silver;
+
   }
 }
