--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -6,6 +6,7 @@
   flex-direction: column;
   transform: translateX(-50%);
   border-bottom: 1px solid @color-gray-silver;
+  z-index: 2;
 
   &--disable {
     display: none;
@@ -13,20 +14,14 @@
 }
 
 .navigation__item {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   min-height: 66px;
   width: 320px;
   font-family: @font-title;
   font-size: 20px;
-  line-height: 20px;
+  line-height: 65px;
   text-transform: uppercase;
   border-top: 1px solid @color-gray-silver;
   color: @color-black;
   background-color: @color-white;
-
-  &:last-child {
-
-  }
 }
