Правки стилей согласно комментариев ver3.

--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -2,8 +2,6 @@
   position: absolute;
   top: 66px;
   left: 50%;
-  display: flex;
-  flex-direction: column;
   transform: translateX(-50%);
   border-bottom: 1px solid @color-gray-silver;
   z-index: 2;
@@ -14,6 +12,7 @@
 }
 
 .navigation__item {
+  display: block;
   text-align: center;
   min-height: 66px;
   width: 320px;
