--- a/src/less/blocks/burger-button.less
+++ b/src/less/blocks/burger-button.less
@@ -9,7 +9,7 @@
   padding: 0;
 
   &::before {
-    content: "";
+    content: '';
     position: absolute;
     top: 4px;
     left: 0;
@@ -20,7 +20,7 @@
   }
 
   &::after {
-    content: "";
+    content: '';
     position: absolute;
     bottom: 4px;
     left: 0;
