--- a/src/less/blocks/content.less
+++ b/src/less/blocks/content.less
@@ -7,8 +7,14 @@
   width: 320px;
   min-height: 510px;
   padding: 28px 0 22px;
-  background-image: linear-gradient(180deg, rgba(104, 183, 56, 0.85) 0, rgba(104, 183, 56, 0.85) 302px, @color-white 302px, @color-white 100%),
-  url("../../img/content-background.png");
+  background-image: linear-gradient(
+      180deg,
+      rgba(104, 183, 56, 0.85) 0,
+      rgba(104, 183, 56, 0.85) 302px,
+      @color-white 302px,
+      @color-white 100%
+    ),
+    url('../../img/content-background.png');
   background-repeat: no-repeat;
 }
 
