--- a/src/less/common/variables.less
+++ b/src/less/common/variables.less
@@ -1,8 +1,8 @@
 @color-black: #000000;
 @color-white: #ffffff;
-@color-gray-silver: #E6E6E6;
-@color-green: #68B738;
-@color-green-dark: #5EAA2F;
+@color-gray-silver: #e6e6e6;
+@color-green: #68b738;
+@color-green-dark: #5eaa2f;
 
-@font-title: "Oswald", sans-serif;
+@font-title: 'Oswald', sans-serif;
 @font-text: Arial, sans-serif;
