--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,11 +1,11 @@
-@import "common/normalize";
-@import "common/global";
-@import "common/variables";
-@import "common/text";
-@import "common/mixins";
+@import 'common/normalize';
+@import 'common/global';
+@import 'common/variables';
+@import 'common/text';
+@import 'common/mixins';
 
-@import "blocks/button";
-@import "blocks/content";
-@import "blocks/header";
-@import "blocks/navigation";
-@import "blocks/burger-button";
+@import 'blocks/button';
+@import 'blocks/content';
+@import 'blocks/header';
+@import 'blocks/navigation';
+@import 'blocks/burger-button';
