--- a/src/less/common/variables.less
+++ b/src/less/common/variables.less
@@ -1,6 +1,8 @@
 @color-black: #000000;
 @color-white: #ffffff;
 @color-gray-silver: #e6e6e6;
+@color-gray: #d9d9d9;
+@color-gray-light: #f2f2f2;
 @color-green: #68b738;
 @color-green-dark: #5eaa2f;
 
