--- a/src/less/blocks/features.less
+++ b/src/less/blocks/features.less
@@ -1,4 +1,7 @@
 .features {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
   margin-bottom: 28px;
 }
 
@@ -6,17 +9,12 @@
   position: relative;
   background-color: @color-gray-light;
   padding: 30px 30px 18px 20px;
-
-  &:not(:last-child) {
-    margin-bottom: 20px;
-  }
 }
 
 .features__img {
   position: absolute;
   top: 30px;
   left: 18px;
-  display: inline-block;
   height: 50px;
   width: 50px;
   background-color: @color-green;
@@ -42,9 +40,9 @@
 }
 
 .features__title {
-  display: inline-block;
-  font-size: 24px;
-  line-height: 50px;
+  .title(24px, 50px);
+  //font-size: 24px;
+  //line-height: 50px;
   text-transform: uppercase;
   padding-left: 70px;
   margin-bottom: 28px;
@@ -54,17 +52,9 @@
   position: relative;
   margin: 0;
   line-height: 18px;
-  margin-bottom: 40px;
-
-  &::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -18px;
-    width: 100%;
-    height: 1px;
-    background-color: @color-gray;
-  }
+  margin-bottom: 12px;
+  border-bottom: 1px solid @color-gray;
+  padding-bottom: 18px;
 }
 
 .features__link {
@@ -73,9 +63,8 @@
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
-  padding-right: 58px;
-  //transition: all 0.3s ease-out;
-  transition: width 0.3s, right 0.3s;
+  padding: 4px 58px 4px 0;
+  transition: 0.3s;
 
   &::after {
     content: '';
@@ -86,6 +75,7 @@
     width: 18px;
     height: 2px;
     background-color: @color-black;
+    transition: width 0.3s, right 0.3s;
   }
 
   &::before {
@@ -98,17 +88,16 @@
     border: 4px solid transparent;
     border-left: 4px solid @color-black;
     z-index: 2;
+    transition: right 0.3s;
   }
 
   &:hover::after {
     right: 6px;
     width: 26px;
-    //transition: width 0.3s, right 0.3s;
   }
 
   &:hover::before {
     right: 0;
-    //transition: right 0.3s;
   }
 
   &:active {
