--- a/src/less/common/mixins.less
+++ b/src/less/common/mixins.less
@@ -1,3 +1,11 @@
 .text-white() {
   color: @color-white;
 }
+
+.title(@font-size, @line-height) {
+  font-size: @font-size;
+  line-height: @line-height;
+  font-family: @font-title;
+  color: @color-black;
+  margin: 0;
+}
