--- a/src/less/blocks/features.less
+++ b/src/less/blocks/features.less
@@ -8,63 +8,42 @@
 .features__wrapper {
   position: relative;
   background-color: @color-gray-light;
-  padding: 30px 30px 18px 20px;
+  padding: 30px 20px 20px 20px;
 }
 
 .features__img {
   position: absolute;
-  top: 30px;
-  left: 18px;
-  height: 50px;
-  width: 50px;
-  background-color: @color-green;
-  border-radius: 50%;
+  top: 20px;
+  left: 20px;
 
-  &::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 53px;
-    height: 50px;
-    background-image: url('../../img/cat-slim.svg');
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-
-  &--weight::before {
-    width: 67px;
-    background-image: url('../../img/cat_back.svg');
-    transform: translateX(-15%);
+  &--weight {
+    top: 24px;
+    left: 12px;
   }
 }
 
 .features__title {
-  .title(24px, 50px);
-  //font-size: 24px;
-  //line-height: 50px;
+  .title(24px, 37px);
   text-transform: uppercase;
-  padding-left: 70px;
+  padding-left: 72px;
   margin-bottom: 28px;
 }
 
 .features__descriptions {
-  position: relative;
   margin: 0;
   line-height: 18px;
-  margin-bottom: 12px;
+  margin-bottom: 16px;
   border-bottom: 1px solid @color-gray;
-  padding-bottom: 18px;
+  padding-bottom: 24px;
+  color: @color-gray-dark;
 }
 
 .features__link {
+  .title(16px, 16px);
   position: relative;
   color: @color-black;
-  font-size: 16px;
-  line-height: 16px;
   text-transform: uppercase;
   padding: 4px 58px 4px 0;
-  transition: 0.3s;
 
   &::after {
     content: '';
