--- a/src/less/common/variables.less
+++ b/src/less/common/variables.less
@@ -3,6 +3,7 @@
 @color-gray-silver: #e6e6e6;
 @color-gray: #d9d9d9;
 @color-gray-light: #f2f2f2;
+@color-gray-dark: #444444;
 @color-green: #68b738;
 @color-green-dark: #5eaa2f;
 
