--- a/src/less/style.less
+++ b/src/less/style.less
@@ -11,3 +11,6 @@
 @import 'blocks/burger-button';
 @import 'blocks/features';
 @import 'blocks/benefits';
+@import 'blocks/example';
+@import 'blocks/description-list';
+@import 'blocks/example-slider';
