--- a/src/less/style.less
+++ b/src/less/style.less
@@ -13,4 +13,4 @@
 @import 'blocks/benefits';
 @import 'blocks/example';
 @import 'blocks/description-list';
-@import 'blocks/example-slider';
+@import 'blocks/slider';
