Правки v3 блоков example-slider, description-list

--- a/src/less/blocks/description-list.less
+++ b/src/less/blocks/description-list.less
@@ -1,7 +1,7 @@
 .description-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 32px;
+  gap: 20px 32px;
   justify-content: center;
   text-align: center;
   font-family: @font-title;
@@ -15,10 +15,11 @@
 
   &--allotted {
     width: 124px;
+    padding-bottom: 14px;
 
     & .description-list__title {
       position: absolute;
-      bottom: -15px;
+      bottom: 0;
       color: @color-gray-dark;
       background-color: @color-gray-light;
       width: 87px;
