--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -21,7 +21,7 @@
   background-color: transparent;
 }
 
-.slider__slider-line {
+.slider__line {
   position: relative;
   width: 84px;
   height: 14px;
