--- a/src/less/style.less
+++ b/src/less/style.less
@@ -14,3 +14,5 @@
 @import 'blocks/example';
 @import 'blocks/description-list';
 @import 'blocks/slider';
+@import 'blocks/footer';
+@import 'blocks/socials';
