Правка блоков footer & socials

--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -3,12 +3,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 8px 20px;
+}
+
+.footer__logo-box {
+  padding: 32px 60px;
+  width: 100%;
+  border-bottom: 1px solid @color-gray;
 }
 
 .footer__logo {
-  padding: 40px 20px 32px;
-  width: 100%;
-  border-bottom: 1px solid @color-gray;
+  display: block;
 }
 
 .footer__img {
@@ -16,11 +21,14 @@
 }
 
 .footer__copyright {
+  width: 100%;
+  padding: 22px 0 14px;
+}
+
+.footer__link {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  padding: 22px 0;
   font-size: 16px;
   color: @color-gray-dark;
 }
