Правка блока map

--- a/src/less/blocks/map.less
+++ b/src/less/blocks/map.less
@@ -2,7 +2,7 @@
   background-color: @color-white;
 }
 
-.map__inner {
+.map__address {
   display: flex;
   padding: 28px 20px;
 }
@@ -22,13 +22,15 @@
 
 .map__box {
   position: relative;
+  background-image: url('../../img/map-mobile.jpg');
+  padding: 0;
+  min-height: 362px;
 }
 
-.map__logo {
+.map__mark {
   position: absolute;
   top: 140px;
   left: 134px;
   width: 57px;
   height: 53px;
-  background-image: url('../../img/marker-icon.png');
 }
