--- a/src/less/style.less
+++ b/src/less/style.less
@@ -4,6 +4,7 @@
 @import 'common/text';
 @import 'common/mixins';
 
+@import 'blocks/layout';
 @import 'blocks/button';
 @import 'blocks/content';
 @import 'blocks/header';
