--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -9,6 +9,20 @@
   &--disable {
     display: none;
   }
+
+  @media (min-width: 768px) {
+    position: static;
+    display: flex;
+    justify-content: space-between;
+    min-width: 440px;
+    border: none;
+    transform: none;
+    padding-bottom: 14px;
+
+    &--disable {
+      display: flex;
+    }
+  }
 }
 
 .navigation__item {
@@ -23,4 +37,23 @@
   border-top: 1px solid @color-gray-silver;
   color: @color-black;
   background-color: @color-white;
+
+  @media (min-width: 768px) {
+    position: relative;
+    font-size: 18px;
+    line-height: 24px;
+    border: none;
+    width: auto;
+    min-height: 24px;
+
+    &--active::after {
+      content: '';
+      position: absolute;
+      bottom: -12px;
+      left: 0;
+      height: 2px;
+      width: 100%;
+      background-color: @color-green;
+    }
+  }
 }
