Стилизайция tablet версии content

--- a/src/less/blocks/content.less
+++ b/src/less/blocks/content.less
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 320px;
+  min-width: 320px;
   min-height: 510px;
   padding: 28px 0 22px;
   background-image: linear-gradient(
@@ -16,6 +16,15 @@
     ),
     url('../../img/content-background.png');
   background-repeat: no-repeat;
+  background-position: top;
+
+  @media (min-width: 768px) {
+    background-image: none;
+    justify-content: start;
+    align-items: start;
+    min-height: 860px;
+    padding: 60px 118px;
+  }
 }
 
 .content__title {
@@ -25,6 +34,16 @@
   line-height: 36px;
   margin: 0 0 24px 0;
   text-align: center;
+  max-width: 320px;
+
+  @media (min-width: 768px) {
+    color: @color-black;
+    max-width: 414px;
+    text-align: left;
+    margin: 0 0 40px 0;
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
 
 .content__description {
@@ -35,8 +54,21 @@
   line-height: 14px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: 768px) {
+    color: @color-black;
+    font-size: 20px;
+    line-height: 20px;
+    margin: 0 0 48px 0;
+  }
 }
 
 .content__img {
   margin-bottom: 4px;
+
+  @media (min-width: 768px) {
+    position: absolute;
+    bottom: -20px;
+    left: 30px;
+  }
 }
