--- a/src/less/blocks/button.less
+++ b/src/less/blocks/button.less
@@ -8,6 +8,7 @@
   line-height: 18px;
   text-transform: uppercase;
   background-color: @color-green;
+  z-index: 1;
 
   &:hover {
     background-color: @color-green-dark;
@@ -15,5 +16,12 @@
 
   &:active {
     color: fade(@color-white, 30%);
+  }
+
+  @media (min-width: 768px) {
+    width: 244px;
+    height: 54px;
+    font-size: 20px;
+    line-height: 20px;
   }
 }
