--- a/src/less/blocks/content.less
+++ b/src/less/blocks/content.less
@@ -22,7 +22,7 @@
     justify-content: start;
     align-items: start;
     min-height: 860px;
-    padding: 60px 30px;
+    padding: 60px 30px 0;
   }
 }
 
@@ -75,6 +75,6 @@
 
   @media (min-width: 768px) {
     order: 2;
-    margin-top: -75px;
+    margin: -75px 0 0 0;
   }
 }
