--- a/src/less/blocks/benefits.less
+++ b/src/less/blocks/benefits.less
@@ -1,11 +1,20 @@
 .benefits {
   padding-top: 28px;
   padding-bottom: 42px;
+
+  @media (min-width: 768px) {
+    padding-top: 44px;
+  }
 }
 
 .benefits__title {
   .title(36px, 40px);
   margin-bottom: 40px;
+
+  @media (min-width: 768px) {
+    font-size: 60px;
+    line-height: 69px;
+  }
 }
 
 .benefits__list {
@@ -15,6 +24,13 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    counter-reset: benefit;
+  }
 }
 
 .benefits__item {
@@ -29,6 +45,8 @@
     top: 0;
     left: 0;
     background-image: url('../../img/nutrition-icon.svg');
+    background-position: center;
+    background-repeat: no-repeat;
     width: 60px;
     height: 60px;
   }
@@ -43,5 +61,31 @@
 
   &--powder::before {
     background-image: url('../../img/improvement-icon.svg');
+  }
+
+  @media (min-width: 768px) {
+    font-size: 16px;
+    line-height: 24px;
+    width: 338px;
+    min-height: 280px;
+    padding: 150px 0 0 0;
+
+    &::before {
+      top: 40px;
+      width: 80px;
+      height: 80px;
+      background-size: 100%;
+    }
+
+    &::after {
+      content: counter(benefit);
+      counter-increment: benefit;
+      position: absolute;
+      top: 0;
+      left: 112px;
+      .title(280px, 280px);
+      color: @color-gray-light;
+      z-index: -1;
+    }
   }
 }
