--- a/src/less/blocks/example.less
+++ b/src/less/blocks/example.less
@@ -2,14 +2,40 @@
   background-color: @color-gray-light;
   padding-top: 28px;
   padding-bottom: 40px;
+
+  @media (min-width: 768px) {
+    padding-top: 48px;
+    padding-bottom: 68px;
+
+    background-color: @color-white;
+
+    background: linear-gradient(
+      @color-white 0,
+      @color-white 620px,
+      @color-gray-light 620px,
+      @color-gray-light 100%
+    );
+  }
 }
 
 .example__title {
   .title(36px, 40px);
   margin-bottom: 32px;
+
+  @media (min-width: 768px) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 64px;
+  }
 }
 
 .example__description {
   margin: 0 0 24px 0;
   color: @color-gray-dark;
+
+  @media (min-width: 768px) {
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 54px;
+  }
 }
