--- a/src/less/blocks/socials.less
+++ b/src/less/blocks/socials.less
@@ -1,7 +1,10 @@
 .socials {
   border-bottom: 1px solid @color-gray;
-  width: 100%;
   padding: 20px 0;
+
+  @media (min-width: 768px) {
+    border: none;
+  }
 }
 
 .socials__list {
@@ -12,6 +15,12 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: 768px) {
+    gap: 0;
+    justify-content: space-between;
+    width: 130px;
+  }
 }
 
 .socials__link {
@@ -22,11 +31,27 @@
   background-repeat: no-repeat;
   background-position: center;
 
+  @media (min-width: 768px) {
+    width: 30px;
+    height: 22px;
+    background-size: 100%;
+  }
+
   &--instagram {
     background-image: url('../../img/icon_instagram.svg');
+
+    @media (min-width: 768px) {
+      width: 23px;
+      height: 23px;
+    }
   }
 
   &--facebook {
     background-image: url('../../img/icon_facebook.svg');
+
+    @media (min-width: 768px) {
+      width: 28px;
+      height: 33px;
+    }
   }
 }
