--- a/src/less/blocks/benefits.less
+++ b/src/less/blocks/benefits.less
@@ -28,8 +28,14 @@
   @media (min-width: 768px) {
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 30px 75px;
     counter-reset: benefit;
+  }
+}
+
+.benefits__box {
+  @media (min-width: 768px) {
+    width: 250px;
   }
 }
 
@@ -66,7 +72,7 @@
   @media (min-width: 768px) {
     font-size: 16px;
     line-height: 24px;
-    width: 338px;
+    width: 308px;
     min-height: 280px;
     padding: 150px 0 0 0;
 
