--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -88,7 +88,8 @@
     width: 34px;
     height: 34px;
     left: 50%;
-    top: calc(50% + 1px);
+    top: 50%;
+    transform: translate(-50%, -50%);
     border: 1px solid @color-gray;
     background-color: @color-white;
     filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.16));
