Добавление переменных @tablet & @desktop

--- a/src/less/blocks/benefits.less
+++ b/src/less/blocks/benefits.less
@@ -2,7 +2,7 @@
   padding-top: 28px;
   padding-bottom: 42px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     padding-top: 44px;
   }
 }
@@ -11,7 +11,7 @@
   .title(36px, 40px);
   margin-bottom: 40px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 60px;
     line-height: 69px;
   }
@@ -25,7 +25,7 @@
   flex-direction: column;
   gap: 20px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 30px 75px;
@@ -34,7 +34,7 @@
 }
 
 .benefits__box {
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 250px;
   }
 }
@@ -69,7 +69,7 @@
     background-image: url('../../img/improvement-icon.svg');
   }
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 16px;
     line-height: 24px;
     width: 308px;
