--- a/src/less/blocks/description-list.less
+++ b/src/less/blocks/description-list.less
@@ -7,7 +7,7 @@
   font-family: @font-title;
   margin: 0 0 32px 0;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     justify-content: start;
     gap: 42px;
     margin-bottom: 72px;
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: center;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     display: flex;
     width: 180px;
     flex-direction: column;
@@ -29,7 +29,7 @@
   &--allotted {
     padding-bottom: 14px;
 
-    @media (min-width: 768px) {
+    @media @tablet {
       width: 162px;
       margin-left: 0;
     }
@@ -46,7 +46,7 @@
       margin: 0;
       text-transform: lowercase;
 
-      @media (min-width: 768px) {
+      @media @tablet {
         font-size: 14px;
         line-height: 14px;
         background-color: @color-white;
@@ -66,7 +66,7 @@
       padding: 14px 8px 18px;
       width: 124px;
 
-      @media (min-width: 768px) {
+      @media @tablet {
         font-size: 30px;
         line-height: 37px;
         width: 162px;
@@ -80,7 +80,7 @@
   margin-right: 4px;
   text-transform: uppercase;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 20px;
     line-height: 20px;
     margin: 0 0 8px 0;
@@ -91,7 +91,7 @@
 .description-list__item {
   margin: 0;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 20px;
     line-height: 20px;
     text-align: right;
