--- a/src/less/blocks/example.less
+++ b/src/less/blocks/example.less
@@ -3,7 +3,7 @@
   padding-top: 28px;
   padding-bottom: 40px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     padding-top: 48px;
     padding-bottom: 68px;
 
@@ -22,7 +22,7 @@
   .title(36px, 40px);
   margin-bottom: 32px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 60px;
     line-height: 60px;
     margin-bottom: 64px;
@@ -33,7 +33,7 @@
   margin: 0 0 24px 0;
   color: @color-gray-dark;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 54px;
