--- a/src/less/blocks/features.less
+++ b/src/less/blocks/features.less
@@ -3,7 +3,7 @@
   gap: 20px;
   flex-direction: column;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     gap: 30px;
   }
 }
@@ -13,7 +13,7 @@
   background-color: @color-gray-light;
   padding: 30px 20px 20px 20px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     display: flex;
     justify-content: space-between;
     padding: 78px 26px 54px 54px;
@@ -21,7 +21,7 @@
 }
 
 .features__block {
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 340px;
   }
 }
@@ -36,7 +36,7 @@
     left: 12px;
   }
 
-  @media (min-width: 768px) {
+  @media @tablet {
     position: static;
     width: 200px;
     height: 211px;
@@ -62,7 +62,7 @@
   padding-left: 72px;
   margin-bottom: 28px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 24px;
@@ -78,7 +78,7 @@
   padding-bottom: 24px;
   color: @color-gray-dark;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 48px;
@@ -133,7 +133,7 @@
     opacity: 0.3;
   }
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 20px;
     line-height: 30px;
   }
