--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -6,7 +6,7 @@
   min-height: 66px;
   width: 320px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 768px;
     min-height: 78px;
     align-items: flex-end;
@@ -14,7 +14,7 @@
 }
 
 .header__logo {
-  @media (min-width: 768px) {
+  @media @tablet {
     display: none;
   }
 }
