--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -4,7 +4,7 @@
   min-height: 240px;
   width: 280px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 676px;
     min-height: 520px;
     margin-bottom: 10px;
@@ -20,7 +20,7 @@
     display: none;
   }
 
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 676px;
     min-height: 520px;
   }
@@ -33,7 +33,7 @@
   width: 200px;
   margin: 0 auto;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 676px;
     justify-content: center;
     gap: 18px;
@@ -47,7 +47,7 @@
   border: none;
   background-color: transparent;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 20px;
     line-height: 30px;
   }
@@ -61,7 +61,7 @@
   border: 1px solid @color-gray;
   border-radius: 6px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 428px;
     height: 6px;
     border-right: 6px;
@@ -82,7 +82,7 @@
   background-color: @color-green;
   padding: 0;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     position: relative;
     border-radius: 50%;
     width: 34px;
