--- a/src/less/common/variables.less
+++ b/src/less/common/variables.less
@@ -9,3 +9,6 @@
 
 @font-title: 'Oswald', sans-serif;
 @font-text: Arial, sans-serif;
+
+@tablet: ~'only screen and (min-width: 768px)';
+@desktop: ~'only screen and (min-width: 1280px)';
