--- a/src/less/blocks/button.less
+++ b/src/less/blocks/button.less
@@ -18,7 +18,7 @@
     color: fade(@color-white, 30%);
   }
 
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 244px;
     min-height: 54px;
     font-size: 20px;
