--- a/src/less/blocks/content.less
+++ b/src/less/blocks/content.less
@@ -17,7 +17,7 @@
   background-repeat: no-repeat;
   background-position: top;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     background-image: none;
     justify-content: start;
     align-items: start;
@@ -35,7 +35,7 @@
   text-align: center;
   max-width: 320px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     color: @color-black;
     max-width: 524px;
     text-align: left;
@@ -54,7 +54,7 @@
   text-align: center;
   text-transform: uppercase;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     color: @color-black;
     font-size: 20px;
     line-height: 20px;
@@ -65,7 +65,7 @@
 .content__button {
   z-index: 1;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     margin: 0 90px;
   }
 }
@@ -73,7 +73,7 @@
 .content__img {
   margin-bottom: 4px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     order: 2;
     margin: -75px 0 0 0;
   }
