--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -2,7 +2,7 @@
   background-color: @color-gray-light;
   padding: 8px 20px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     display: flex;
     align-items: center;
     padding: 54px 30px 60px;
@@ -14,7 +14,7 @@
   padding: 32px 60px;
   border-bottom: 1px solid @color-gray;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     border: none;
     padding: 0;
   }
@@ -27,7 +27,7 @@
 .footer__img {
   margin: 0 auto;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     margin: 0;
   }
 }
@@ -35,7 +35,7 @@
 .footer__copyright {
   padding: 22px 0 14px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     padding: 0;
   }
 }
@@ -47,7 +47,7 @@
   font-size: 16px;
   color: @color-gray-dark;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     & img {
       margin-left: 20px;
     }
