--- a/src/less/blocks/map.less
+++ b/src/less/blocks/map.less
@@ -6,7 +6,7 @@
   display: flex;
   padding: 28px 20px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     display: flex;
     justify-content: space-between;
     padding: 70px 30px;
@@ -19,7 +19,7 @@
   text-transform: uppercase;
   width: 50%;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 20px;
     line-height: 21px;
     width: 180px;
@@ -33,7 +33,7 @@
   margin: 0;
   color: @color-gray-dark;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     font-size: 16px;
     width: 160px;
     margin-right: 40px;
@@ -52,7 +52,7 @@
   padding: 0;
   min-height: 362px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     background-image: url('../../img/map-tablet.jpg');
   }
 }
@@ -64,7 +64,7 @@
   width: 57px;
   height: 53px;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 113px;
     height: 106px;
     left: 333px;
