--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -10,7 +10,7 @@
     display: none;
   }
 
-  @media (min-width: 768px) {
+  @media @tablet {
     position: static;
     display: flex;
     justify-content: space-between;
@@ -38,7 +38,7 @@
   color: @color-black;
   background-color: @color-white;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     position: relative;
     font-size: 18px;
     line-height: 24px;
