--- a/src/less/blocks/socials.less
+++ b/src/less/blocks/socials.less
@@ -2,7 +2,7 @@
   border-bottom: 1px solid @color-gray;
   padding: 20px 0;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     border: none;
     padding: 0;
   }
@@ -17,7 +17,7 @@
   margin: 0;
   padding: 0;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     gap: 0;
     justify-content: space-between;
     width: 130px;
@@ -32,7 +32,7 @@
   background-repeat: no-repeat;
   background-position: center;
 
-  @media (min-width: 768px) {
+  @media @tablet {
     width: 30px;
     height: 22px;
     background-size: 100%;
@@ -41,7 +41,7 @@
   &--instagram {
     background-image: url('../../img/icon_instagram.svg');
 
-    @media (min-width: 768px) {
+    @media @tablet {
       width: 23px;
       height: 23px;
     }
@@ -50,7 +50,7 @@
   &--facebook {
     background-image: url('../../img/icon_facebook.svg');
 
-    @media (min-width: 768px) {
+    @media @tablet {
       width: 28px;
       height: 33px;
     }
