--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -11,6 +11,11 @@
     min-height: 78px;
     align-items: flex-end;
   }
+
+  @media @desktop {
+    width: 1280px;
+    min-height: 110px;
+  }
 }
 
 .header__logo {
