--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -23,6 +23,10 @@
       display: flex;
     }
   }
+
+  @media @tablet {
+    min-width: 478px;
+  }
 }
 
 .navigation__item {
@@ -55,5 +59,10 @@
       width: 100%;
       background-color: @color-green;
     }
+  }
+
+  @media @tablet {
+    font-size: 20px;
+    line-height: 30px;
   }
 }
