--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -4,16 +4,14 @@
   align-items: center;
   justify-content: space-between;
   min-height: 66px;
-  width: 320px;
+  width: 100%;
 
   @media @tablet {
-    width: 768px;
     min-height: 78px;
     align-items: flex-end;
   }
 
   @media @desktop {
-    width: 1280px;
     min-height: 110px;
   }
 }
