fix блока header&navigation. Стилизация блока content под desktop.

--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -62,7 +62,14 @@
   }
 
   @media @tablet {
+    .state();
     font-size: 20px;
     line-height: 30px;
+    color: @color-white;
+    background-color: transparent;
+
+    &--active::after {
+      background-color: @color-white;
+    }
   }
 }
