--- a/src/less/blocks/content.less
+++ b/src/less/blocks/content.less
@@ -1,4 +1,5 @@
 .content {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,6 +25,28 @@
     min-height: 860px;
     padding: 60px 30px 0;
   }
+
+  @media @desktop {
+    padding: 114px 30px 0;
+    min-height: 670px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: -110px;
+      right: -80px;
+      width: 720px;
+      height: 694px;
+      background-image: linear-gradient(
+          180deg,
+          rgba(104, 183, 56, 0.85) 0,
+          rgba(104, 183, 56, 0.85) 694px,
+          @color-white 694px,
+          @color-white 100%
+        ),
+        url('../../img/content-background-desktop.jpg');
+    }
+  }
 }
 
 .content__title {
@@ -43,6 +66,13 @@
     font-size: 60px;
     line-height: 60px;
   }
+
+  @media @desktop {
+    font-size: 60px;
+    line-height: 60px;
+    z-index: 2;
+    margin: 0 90px 40px 80px;
+  }
 }
 
 .content__description {
@@ -60,13 +90,18 @@
     line-height: 20px;
     margin: 0 90px 48px 90px;
   }
+
+  @media @desktop {
+    margin: 0 90px 50px 80px;
+    z-index: 2;
+  }
 }
 
 .content__button {
   z-index: 1;
 
   @media @tablet {
-    margin: 0 90px;
+    margin: 0 90px 40px 80px;
   }
 }
 
@@ -76,5 +111,10 @@
   @media @tablet {
     order: 2;
     margin: -75px 0 0 0;
+  }
+
+  @media @desktop {
+    margin: -406px 0 0 448px;
+    z-index: 1;
   }
 }
