--- a/src/less/common/mixins.less
+++ b/src/less/common/mixins.less
@@ -9,3 +9,12 @@
   color: @color-black;
   margin: 0;
 }
+
+.state() {
+  &:hover {
+    opacity: 0.6;
+  }
+  &:active {
+    opacity: 0.3;
+  }
+}
