--- a/src/less/blocks/content.less
+++ b/src/less/blocks/content.less
@@ -27,25 +27,19 @@
   }
 
   @media @desktop {
-    padding: 114px 30px 0;
-    min-height: 670px;
+    padding: 224px 30px 0;
+    min-height: 694px;
+    margin-bottom: 86px;
 
-    &::before {
-      content: '';
-      position: absolute;
-      top: -110px;
-      right: -80px;
-      width: 720px;
-      height: 694px;
-      background-image: linear-gradient(
-          180deg,
-          rgba(104, 183, 56, 0.85) 0,
-          rgba(104, 183, 56, 0.85) 694px,
-          @color-white 694px,
-          @color-white 100%
-        ),
-        url('../../img/content-background-desktop.jpg');
-    }
+    background-image: linear-gradient(
+        180deg,
+        rgba(104, 183, 56, 0.85) 0,
+        rgba(104, 183, 56, 0.85) 694px,
+        @color-white 694px,
+        @color-white 100%
+      ),
+      url('../../img/content-background-desktop.jpg');
+    background-position: left 114% bottom -45%;
   }
 }
 
