--- a/src/less/blocks/features.less
+++ b/src/less/blocks/features.less
@@ -6,6 +6,11 @@
   @media @tablet {
     gap: 30px;
   }
+
+  @media @desktop {
+    flex-direction: row;
+    gap: 86px;
+  }
 }
 
 .features__wrapper {
@@ -18,11 +23,18 @@
     justify-content: space-between;
     padding: 78px 26px 54px 54px;
   }
+
+  @media @desktop {
+    padding: 74px 54px 60px 52px;
+  }
 }
 
 .features__block {
   @media @tablet {
     width: 340px;
+  }
+  @media @desktop {
+    width: 460px;
   }
 }
 
@@ -54,6 +66,27 @@
       height: 200px;
     }
   }
+
+  @media @desktop {
+    position: absolute;
+    top: 36px;
+    left: 50px;
+    width: 100px;
+    height: 106px;
+    margin: 0;
+
+    & svg {
+      width: 100%;
+      height: 100%;
+    }
+
+    &--weight {
+      top: 40px;
+      left: 30px;
+      width: 134px;
+      height: 100px;
+    }
+  }
 }
 
 .features__title {
@@ -67,6 +100,11 @@
     line-height: 36px;
     margin-bottom: 24px;
     padding-left: 0;
+  }
+
+  @media @desktop {
+    padding-left: 160px;
+    margin-bottom: 74px;
   }
 }
 
@@ -85,6 +123,11 @@
     border: none;
     min-height: 96px;
     padding: 0;
+  }
+
+  @media @tablet {
+    width: 467px;
+    margin: 0;
   }
 }
 
