fix блоков по дизайну

--- a/src/less/blocks/features.less
+++ b/src/less/blocks/features.less
@@ -98,7 +98,7 @@
   @media @tablet {
     font-size: 36px;
     line-height: 36px;
-    margin-bottom: 24px;
+    margin-bottom: 26px;
     padding-left: 0;
   }
 
@@ -119,13 +119,14 @@
   @media @tablet {
     font-size: 16px;
     line-height: 24px;
-    margin-bottom: 48px;
+    margin-bottom: 50px;
     border: none;
     min-height: 96px;
     padding: 0;
+    width: 340px;
   }
 
-  @media @tablet {
+  @media @desktop {
     width: 467px;
     margin: 0;
   }
