--- a/src/less/blocks/content.less
+++ b/src/less/blocks/content.less
@@ -1,12 +1,4 @@
 .content {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  min-width: 320px;
-  min-height: 510px;
-  padding: 28px 0 22px;
   background-image: linear-gradient(
       180deg,
       rgba(104, 183, 56, 0.85) 0,
@@ -23,23 +15,43 @@
     justify-content: start;
     align-items: start;
     min-height: 860px;
-    padding: 60px 30px 0;
+  }
+
+  @media @desktop {
+    background: linear-gradient(
+        90deg,
+        @color-white 0,
+        @color-white 50%,
+        rgba(104, 183, 56, 0.85) 50%,
+        rgba(104, 183, 56, 0.85) 100%
+      ),
+      url('../../img/content-background-desktop-full.jpg') no-repeat calc(50% + 360px)
+        bottom;
+    min-height: 694px;
+  }
+}
+
+.content_wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  //justify-content: center;
+  flex-direction: column;
+  min-width: 320px;
+  min-height: 510px;
+  padding: 28px 0 22px;
+
+  @media @tablet {
+    justify-content: start;
+    align-items: start;
+    min-height: 860px;
+    padding: 60px 28px 0;
   }
 
   @media @desktop {
     padding: 224px 30px 0;
     min-height: 694px;
     margin-bottom: 86px;
-
-    background-image: linear-gradient(
-        180deg,
-        rgba(104, 183, 56, 0.85) 0,
-        rgba(104, 183, 56, 0.85) 694px,
-        @color-white 694px,
-        @color-white 100%
-      ),
-      url('../../img/content-background-desktop.jpg');
-    background-position: left 114% bottom -45%;
   }
 }
 
@@ -48,7 +60,7 @@
   font-family: @font-title;
   font-size: 36px;
   line-height: 36px;
-  margin: 0 0 24px 0;
+  margin: 0 0 20px 0;
   text-align: center;
   max-width: 320px;
 
@@ -56,7 +68,7 @@
     color: @color-black;
     max-width: 524px;
     text-align: left;
-    margin: 0 90px 40px 90px;
+    margin: 0 90px 42px 90px;
     font-size: 60px;
     line-height: 60px;
   }
@@ -71,7 +83,7 @@
 
 .content__description {
   .text-white();
-  margin: 0 0 26px 0;
+  margin: 0 0 10px 0;
   font-family: @font-title;
   font-size: 14px;
   line-height: 14px;
@@ -82,7 +94,7 @@
     color: @color-black;
     font-size: 20px;
     line-height: 20px;
-    margin: 0 90px 48px 90px;
+    margin: 0 90px 50px 90px;
   }
 
   @media @desktop {
@@ -95,16 +107,20 @@
   z-index: 1;
 
   @media @tablet {
+    margin: 0 90px 40px 90px;
+  }
+
+  @media @desktop {
     margin: 0 90px 40px 80px;
   }
 }
 
 .content__img {
-  margin-bottom: 4px;
+  margin: 0 auto;
 
   @media @tablet {
     order: 2;
-    margin: -75px 0 0 0;
+    margin: -125px auto 0;
   }
 
   @media @desktop {
