--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -14,6 +14,9 @@
   @media @desktop {
     min-height: 110px;
     position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
   }
 }
 
