--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -24,7 +24,7 @@
     }
   }
 
-  @media @tablet {
+  @media @desktop {
     min-width: 478px;
   }
 }
@@ -61,7 +61,7 @@
     }
   }
 
-  @media @tablet {
+  @media @desktop {
     .state();
     font-size: 20px;
     line-height: 30px;
