--- a/src/less/blocks/content.less
+++ b/src/less/blocks/content.less
@@ -15,6 +15,7 @@
     justify-content: start;
     align-items: start;
     min-height: 860px;
+    margin-bottom: 12px;
   }
 
   @media @desktop {
@@ -28,30 +29,25 @@
       url('../../img/content-background-desktop-full.jpg') no-repeat calc(50% + 360px)
         bottom;
     min-height: 694px;
+    margin-bottom: 86px;
   }
 }
 
-.content_wrapper {
-  position: relative;
-  display: flex;
-  align-items: center;
-  //justify-content: center;
-  flex-direction: column;
-  min-width: 320px;
-  min-height: 510px;
-  padding: 28px 0 22px;
+.content__wrapper {
+  padding: 26px 20px 24px;
 
   @media @tablet {
-    justify-content: start;
-    align-items: start;
-    min-height: 860px;
-    padding: 60px 28px 0;
+    padding: 0;
   }
+}
 
+.content__inner {
+  position: relative;
+  @media @tablet {
+    padding: 60px 117px;
+  }
   @media @desktop {
-    padding: 224px 30px 0;
-    min-height: 694px;
-    margin-bottom: 86px;
+    padding: 226px 107px 40px;
   }
 }
 
@@ -60,30 +56,29 @@
   font-family: @font-title;
   font-size: 36px;
   line-height: 36px;
-  margin: 0 0 20px 0;
+  margin: 0 0 24px 0;
   text-align: center;
-  max-width: 320px;
 
   @media @tablet {
     color: @color-black;
     max-width: 524px;
     text-align: left;
-    margin: 0 90px 42px 90px;
     font-size: 60px;
     line-height: 60px;
+    margin: 0 0 44px;
   }
 
   @media @desktop {
     font-size: 60px;
     line-height: 60px;
     z-index: 2;
-    margin: 0 90px 40px 80px;
+    margin: 0 0 38px;
   }
 }
 
 .content__description {
   .text-white();
-  margin: 0 0 10px 0;
+  margin: 0 0 28px 0;
   font-family: @font-title;
   font-size: 14px;
   line-height: 14px;
@@ -94,37 +89,41 @@
     color: @color-black;
     font-size: 20px;
     line-height: 20px;
-    margin: 0 90px 50px 90px;
+    text-align: left;
+    margin: 0 0 48px 0;
   }
 
   @media @desktop {
-    margin: 0 90px 50px 80px;
     z-index: 2;
+    margin: 0 0 50px 0;
+  }
+}
+
+.content__img {
+  margin: 0 auto 4px;
+
+  @media @tablet {
+    position: absolute;
+    top: 262px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -1;
+  }
+
+  @media @desktop {
+    position: absolute;
+    top: 26%;
+    left: 59%;
+    z-index: 0;
   }
 }
 
 .content__button {
   z-index: 1;
-
-  @media @tablet {
-    margin: 0 90px 40px 90px;
-  }
-
-  @media @desktop {
-    margin: 0 90px 40px 80px;
-  }
-}
-
-.content__img {
   margin: 0 auto;
+  display: block;
 
   @media @tablet {
-    order: 2;
-    margin: -125px auto 0;
-  }
-
-  @media @desktop {
-    margin: -406px 0 0 448px;
-    z-index: 1;
+    margin: 0;
   }
 }
