--- a/src/less/blocks/features.less
+++ b/src/less/blocks/features.less
@@ -75,11 +75,6 @@
     height: 106px;
     margin: 0;
 
-    & svg {
-      width: 100%;
-      height: 100%;
-    }
-
     &--weight {
       top: 40px;
       left: 30px;
@@ -121,14 +116,13 @@
     line-height: 24px;
     margin-bottom: 50px;
     border: none;
-    min-height: 96px;
     padding: 0;
     width: 340px;
   }
 
   @media @desktop {
     width: 467px;
-    margin: 0;
+    margin-bottom: 24px;
   }
 }
 
@@ -142,7 +136,7 @@
   &::after {
     content: '';
     position: absolute;
-    right: 14px;
+    right: 24px;
     top: 50%;
     transform: translateY(-50%);
     width: 18px;
@@ -154,7 +148,7 @@
   &::before {
     content: '';
     position: absolute;
-    right: 8px;
+    right: 18px;
     top: 50%;
     transform: translateY(-50%);
     background-color: transparent;
@@ -164,21 +158,40 @@
     transition: right 0.3s;
   }
 
-  &:hover::after {
-    right: 6px;
+  &:active::after {
+    right: 16px;
     width: 26px;
   }
 
-  &:hover::before {
-    right: 0;
-  }
-
-  &:active {
-    opacity: 0.3;
+  &:active::before {
+    right: 10px;
   }
 
   @media @tablet {
     font-size: 20px;
     line-height: 30px;
+  }
+
+  @media @desktop {
+    &::after {
+      right: 14px;
+    }
+
+    &::before {
+      right: 8px;
+    }
+
+    &:hover::after {
+      right: 6px;
+      width: 26px;
+    }
+
+    &:hover::before {
+      right: 0;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 }
