Стилизация блока example

--- a/src/less/blocks/benefits.less
+++ b/src/less/blocks/benefits.less
@@ -5,6 +5,10 @@
   @media @tablet {
     padding-top: 44px;
   }
+
+  @media @desktop {
+    padding-bottom: 0;
+  }
 }
 
 .benefits__title {
@@ -74,7 +78,7 @@
     background-image: url('../../img/replacement-icon.svg');
   }
 
-  &--powder::before {
+  &--improvement::before {
     background-image: url('../../img/improvement-icon.svg');
   }
 
