--- a/src/less/blocks/description-list.less
+++ b/src/less/blocks/description-list.less
@@ -8,9 +8,40 @@
   text-align: center;
 
   @media @tablet {
-    gap: 42px;
+    gap: 24px;
     justify-content: start;
-    margin-bottom: 72px;
+    margin-bottom: 78px;
+  }
+
+  @media @desktop {
+    gap: 42px;
+  }
+}
+
+.description-list__title {
+  margin-right: 4px;
+  text-transform: uppercase;
+
+  @media @tablet {
+    margin: 0 0 8px 0;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: right;
+  }
+
+  @media @desktop {
+    margin-right: 62px;
+  }
+}
+
+.description-list__item {
+  margin: 0;
+
+  @media @tablet {
+    margin-bottom: 16px;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: right;
   }
 }
 
@@ -19,8 +50,11 @@
   display: flex;
   justify-content: center;
 
-  &--allotted {
+  @media @tablet {
+    margin-left: auto;
+  }
 
+  &--allotted {
     & .description-list__title {
       position: absolute;
       bottom: 0;
@@ -43,6 +77,10 @@
         background-color: @color-white;
         transform: translateX(-28%);
       }
+
+      @media @desktop {
+        background-color: @color-gray-light;
+      }
     }
 
     & .description-list__item {
@@ -59,8 +97,8 @@
         line-height: 37px;
         text-align: center;
       }
-
     }
+
     padding-bottom: 14px;
 
     @media @tablet {
@@ -73,29 +111,11 @@
     display: flex;
     flex-direction: column;
     width: 180px;
-    margin-left: auto;
   }
-}
 
-.description-list__title {
-  margin-right: 4px;
-  text-transform: uppercase;
-
-  @media @tablet {
-    margin: 0 0 8px 0;
-    font-size: 20px;
-    line-height: 20px;
-    text-align: right;
-  }
-}
-
-.description-list__item {
-  margin: 0;
-
-  @media @tablet {
-    margin-bottom: 16px;
-    font-size: 20px;
-    line-height: 20px;
-    text-align: right;
+  @media @desktop {
+    flex-direction: row;
+    margin-left: 0;
+    width: auto;
   }
 }
