--- a/src/less/blocks/example.less
+++ b/src/less/blocks/example.less
@@ -12,8 +12,33 @@
       @color-gray-light 620px,
       @color-gray-light 100%
     );
-
     background-color: @color-white;
+  }
+
+  @media @tablet {
+    padding-top: 44px;
+  }
+
+  @media @desktop {
+    padding-top: 12px;
+    background: linear-gradient(
+      @color-white 0,
+      @color-white 205px,
+      @color-gray-light 205px,
+      @color-gray-light 100%
+    );
+  }
+}
+
+.example__wrapper {
+  @media @desktop {
+    display: flex;
+  }
+}
+
+.example__inner {
+  @media @desktop {
+    padding-top: 58px;
   }
 }
 
@@ -26,6 +51,10 @@
     font-size: 60px;
     line-height: 60px;
   }
+
+  @media @desktop {
+    margin-bottom: 146px;
+  }
 }
 
 .example__description {
@@ -33,8 +62,13 @@
   color: @color-gray-dark;
 
   @media @tablet {
-    margin-bottom: 54px;
+    margin-bottom: 50px;
     font-size: 16px;
     line-height: 24px;
+  }
+
+  @media @desktop {
+    width: 436px;
+    margin-bottom: 70px;
   }
 }
