--- a/src/less/blocks/map.less
+++ b/src/less/blocks/map.less
@@ -1,22 +1,40 @@
 .map {
   background-color: @color-white;
+
+  @media @desktop {
+    position: relative;
+  }
 }
 
 .map__address {
   display: flex;
-  padding: 28px 20px;
+  justify-content: space-between;
+  padding: 14px 20px 28px;
 
   @media @tablet {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 70px 30px;
+    font-size: 20px;
+    line-height: 21px;
+    padding: 64px 30px;
+  }
+  @media @desktop {
+    position: absolute;
+    top: 94px;
+    left: calc(50% - 608px);
+    padding-top: 62px;
+    padding-bottom: 66px;
+    padding-right: 44px;
+    padding-left: 38px;
+    z-index: 2;
+    background-color: @color-white;
   }
 }
 
 .map__title {
   .title(16px, 20px);
-  width: 50%;
+  width: 140px;
   text-transform: uppercase;
 
   @media @tablet {
@@ -26,24 +44,32 @@
     line-height: 21px;
   }
 
+  @media @desktop {
+    margin-right: 42px;
+    width: 205px;
+  }
 }
 
 .map__description {
-  width: 50%;
+  width: 140px;
   margin: 0;
   color: @color-gray-dark;
   line-height: 20px;
 
   @media @tablet {
+    width: 160px;
+    margin-right: 40px;
+    font-size: 16px;
+    text-align: right;
 
     & span {
       display: block;
       margin-top: 12px;
     }
-    width: 160px;
-    margin-right: 40px;
-    font-size: 16px;
-    text-align: right;
+  }
+
+  @media @desktop {
+    text-align: left;
   }
 }
 
@@ -52,23 +78,35 @@
   min-height: 362px;
   padding: 0;
   background-image: url('../../img/map-mobile.jpg');
+  background-repeat: no-repeat;
+  background-position-x: center;
 
   @media @tablet {
     background-image: url('../../img/map-tablet.jpg');
+    min-height: 400px;
+  }
+  @media @desktop {
+    background-image: url('../../img/map-desktop.jpg');
   }
 }
 
 .map__mark {
   position: absolute;
   top: 140px;
-  left: 134px;
+  left: 50%;
+  transform: translateX(-50%);
   width: 57px;
   height: 53px;
 
   @media @tablet {
     top: 146px;
-    left: 333px;
+    left: 50%;
     width: 113px;
     height: 106px;
+  }
+
+  @media @desktop {
+    top: 128px;
+    left: calc(50% + 240px);
   }
 }
