Стилизация блока footer для desktop, а так же правка блоков layout & slider для mobile

--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -1,6 +1,9 @@
 .footer {
-  padding: 8px 20px;
   background-color: @color-gray-light;
+}
+
+.footer__wrapper {
+  padding: 8px 20px;
 
   @media @tablet {
     display: flex;
