--- a/src/less/blocks/layout.less
+++ b/src/less/blocks/layout.less
@@ -1,10 +1,14 @@
 .layout {
-  min-width: 320px;
-  max-width: 1280px;
+  width: 320px;
   margin: 0 auto;
   padding: 0 20px;
 
   @media @tablet {
     padding: 0 30px;
+    width: 768px;
+  }
+
+  @media @desktop {
+    width: 1280px;
   }
 }
