--- a/src/less/blocks/map.less
+++ b/src/less/blocks/map.less
@@ -1,6 +1,8 @@
 .map {
-  background-color: @color-white;
+  background-color: @color-gray-light;
+}
 
+.map__wrapper {
   @media @desktop {
     position: relative;
   }
@@ -10,11 +12,10 @@
   display: flex;
   justify-content: space-between;
   padding: 14px 20px 28px;
+  background-color: @color-white;
 
   @media @tablet {
-    display: flex;
     align-items: center;
-    justify-content: space-between;
     font-size: 20px;
     line-height: 21px;
     padding: 64px 30px;
@@ -22,13 +23,14 @@
   @media @desktop {
     position: absolute;
     top: 94px;
-    left: calc(50% - 608px);
+    //left: calc(50% - 608px);
+    left: 30px;
+    width: 570px;
     padding-top: 62px;
     padding-bottom: 66px;
     padding-right: 44px;
     padding-left: 38px;
     z-index: 2;
-    background-color: @color-white;
   }
 }
 
