Разметка страницы каталог. Блоки header, map, footer.

--- a/src/less/blocks/navigation.less
+++ b/src/less/blocks/navigation.less
@@ -71,5 +71,13 @@
     &--active::after {
       background-color: @color-white;
     }
+
+    &--inner-page {
+      color: @color-black;
+    }
+
+    &--inner-page::after {
+      background-color: @color-green;
+    }
   }
 }
