--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -17,6 +17,11 @@
     z-index: 2;
     min-height: 110px;
     transform: translateX(-50%);
+
+    &--inner-page {
+      position: static;
+      transform: none;
+    }
   }
 }
 
