Добавлен блок catalog-title. Внесены правки в блоки header, map

--- a/src/less/blocks/map.less
+++ b/src/less/blocks/map.less
@@ -3,6 +3,8 @@
 }
 
 .map__wrapper {
+  background-color: @color-white;
+
   @media @desktop {
     position: relative;
   }
@@ -11,7 +13,7 @@
 .map__address {
   display: flex;
   justify-content: space-between;
-  padding: 14px 20px 28px;
+  padding: 14px 0 28px;
   background-color: @color-white;
 
   @media @tablet {
@@ -23,7 +25,6 @@
   @media @desktop {
     position: absolute;
     top: 94px;
-    //left: calc(50% - 608px);
     left: 30px;
     width: 570px;
     padding-top: 62px;
