--- a/src/less/blocks/cards.less
+++ b/src/less/blocks/cards.less
@@ -14,3 +14,11 @@
     padding: 0 30px;
   }
 }
+
+.cards__item {
+  border-bottom: 1px solid @color-gray-silver;
+
+  @media @tablet {
+    border: none;
+  }
+}
