Доработка блока card, заменена графика, добавлена карточка "показать все" (card-add)

--- a/src/less/blocks/cards.less
+++ b/src/less/blocks/cards.less
@@ -8,13 +8,16 @@
   @media @tablet {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 60px;
     max-width: 768px;
     padding: 0 30px;
+    margin: 0 auto;
   }
 
   @media @desktop {
     max-width: 1280px;
+    gap: 63px 80px;
   }
 }
 
