--- a/src/less/blocks/card-add.less
+++ b/src/less/blocks/card-add.less
@@ -1,4 +1,4 @@
-.card {
+.card-add {
   margin: 0 auto;
   width: 320px;
   padding: 18px 20px 26px;
@@ -20,10 +20,11 @@
   }
 }
 
-.card__inner {
+.card-add__inner {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 12px;
+  flex-direction: column;
+  margin-bottom: 20px;
 
   @media @tablet {
     margin-bottom: 33px;
@@ -31,42 +32,18 @@
   }
 }
 
-.card__picture {
-  flex-grow: 2;
-
-  & img {
-    margin: 0 auto;
-  }
-
-  @media @tablet {
-    margin-bottom: 34px;
-  }
+.card__icon {
+  padding: 5px;
+  margin: 0 auto 14px;
 }
 
-.card__table {
-  width: 140px;
-
-  @media @tablet {
-    width: 100%;
-  }
-}
-
-.card__box {
-  display: flex;
-  justify-content: space-between;
-
-  @media @tablet {
-    border-bottom: 1px solid @color-gray;
-  }
-}
-
-.card__title {
+.card-add__title {
   .title(16px, 20px);
-  text-align: left;
-  width: 76px;
+  width: auto;
   text-transform: uppercase;
   color: @color-gray-deep;
-  margin: 0 0 14px;
+  margin-bottom: 8px;
+  text-align: center;
 
   @media @tablet {
     font-size: 20px;
@@ -77,16 +54,13 @@
   }
 }
 
-.card__description {
+.card-add__description {
   font-size: 12px;
   line-height: 16px;
   font-weight: 400;
   padding: 0;
   margin: 0;
-
-  &--text-right {
-    text-align: right;
-  }
+  text-align: center;
 
   @media @tablet {
     font-size: 16px;
@@ -95,13 +69,15 @@
   }
 }
 
-.card__button {
+.card-add__button {
   min-height: 40px;
   font-size: 16px;
   line-height: 20px;
   padding: 10px;
   margin: 0 auto;
   display: block;
+  color: @color-gray-dark;
+  background-color: @color-gray-light;
 
   @media @desktop {
     width: 168px;
