--- a/src/less/blocks/cards.less
+++ b/src/less/blocks/cards.less
@@ -1,4 +1,4 @@
-.cards__list {
+.cards {
   list-style: none;
   width: auto;
   max-width: none;
@@ -7,7 +7,7 @@
 
   @media @tablet {
     display: flex;
-    justify-content: space-between;
+    align-items: flex-end;
     flex-wrap: wrap;
     gap: 60px;
     max-width: 768px;
