--- a/src/less/style.less
+++ b/src/less/style.less
@@ -20,4 +20,4 @@
 @import 'blocks/catalog';
 @import 'blocks/cards';
 @import 'blocks/card';
-@import 'blocks/card-add';
+@import 'blocks/show-more';
