Добавлена разметка блоков cross-sale & sale, а так же графика

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -22,3 +22,5 @@
 @import 'blocks/card';
 @import 'blocks/show-more';
 @import 'blocks/caption';
+@import 'blocks/cross-sale';
+@import 'blocks/sale';
